# design

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  README.rst  me  pyproject.toml  requirements.txt  setup.py  tox.ini
design/: borders.py  buttons.py  clouds.py  design.py  gradients.py
docs/: Makefile  conf.py  design.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
examples/: examples.py
tests/: test_borders.py  test_buttons.py  test_clouds.py  test_gradients.py
